// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerToggler should render with maximum props 1`] = `
<div
  className="container uui-input-box -clickable root size-48 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  />
  <div
    className="actions"
  >
    <div
      aria-label="Clear"
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
      role="button"
      style={Object {}}
      tabIndex={-1}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerToggler should render with minimum props 1`] = `
<div
  className="container uui-input-box root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input singleInput"
      onChange={[Function]}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  />
</div>
`;
